# 3DRenderer

./: .gitmodules  3DRenderer.sln  3DRenderer.vcxproj  3DRenderer.vcxproj.filters  CMakeLists.txt  README.md  imgui.ini  main.cpp
Assets/Objects/GEVO/: Gevo.mtl
Assets/Objects/basics/: floor.mtl  sphere.mtl
Assets/Objects/trex/: trex.mtl
Assets/Shaders/: fragment.fs  lightFragment.fs  tessControl.tcs  tessEval.tes
Objects/: Camera.h
Shaders/: fragment.fs  vertex.vs
Source/: Camera.h  DirLight.h  GameObject.h  Mesh.h  Model.h  PointLight.h  Scene.h  Shader.h  SpotLight.h  Transform.h
glad/src/: glad.c
includes/glad/include/glad/: glad.h
includes/glad/src/: glad.c
